Closed Bug 12131 Opened 25 years ago Closed 25 years ago

Message counts not automatically updated after a copy/move

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

All
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: nbaca, Assigned: jefft)

References

Details

(Whiteboard: [PR1])

Build 1999081608M9: Win32/NT4, Linux/Redhat 6.0, Mac 8.5.1

Overview: Folder message counts are not automatically updated after copying and
moving.

Steps to Reproduce:
1. Configure for an IMAP or POP account.
2. Select the Inbox.
3. Note the number of unread/total messages in the Inbox.
4. Look for another folder (i.e. folder1) and make a note of the number
unread/total messages. Do not select the folder, folder1, just make a note of
the message counts.
5. Move a message from the Inbox into folder1 and note whether the message count
changes.
6. Select folder1 and note the message count.
7. Select the Inbox.
8. Copy a message from the Inbox into folder1 and note whether the message count
changes.
9. Select folder1 and note the message count.

Actual results: You must select the folder to see the message counts change.

Expected results: Would like to see message counts change as soon as the action
occurs. It shouldn't be a requirement to select the folder to see the changes.

Additional Information: Getting Messages automatically updates the message
counts for the Inbox as expected. Deleting messages automatically updates the
message counts because you are already in the folder where the action is taking
place.
Assignee: phil → jefft
Reassign to jefft, cc bienvenu
Status: NEW → ASSIGNED
Target Milestone: M11
M1 ...
Whiteboard: [PR1]
I think this needs to be fixed for PR1, so I added a note to the Status
Whiteboard
Blocks: 11091
(target milestone is M11 or M12 - add to mail beta tracking bug)
Pop3 is working fine. Imap doesn't update the message account.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fix for imap check in. nsImapMailFolder.cpp modified.
*** Bug 16911 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
Linux Redhat 6.0 (1999-11-04-08 M11)
Win_nt 4.0 (1999-11-04-09 M11)
Mac (1999-11-04-08 M11)
POP: On all three systems, message counts automatically updates instantaneously.
IMAP: It works on MAC and Linux consistently.  But I had to try Win_nt 3-4
times. It finally works on Win_NT 4.0.
So Mark it verified.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.